# docker-games

./: .gitignore  LICENSE  README.md
bot_inits/matching-pennies/: Cargo.toml  Dockerfile
bot_inits/matching-pennies/src/: benchmark.rs  main.rs
bots/matching-pennies/: Cargo.toml
bots/matching-pennies/src/: main.rs
servers/matching-pennies/: Cargo.toml  Dockerfile
servers/matching-pennies/src/: benchmark.rs  main.rs  message_pack.rs
