[package]
name = "matching-pennies-bot"
version = "0.1.0"
authors = ["root"]

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq.git"

[[bin]]
name = "mpb-benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "matching-pennies-bot"
path = "src/main.rs"

[dependencies.rmp-serialize]
rmp-serialize = "0.7.0"

[dependencies]
rustc-serialize = "*"
