[package]
name = "matching-pennies-server"
version = "0.1.0"
authors = ["root"]

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq.git"

[[bin]]
name = "mps-benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "matching-pennies"
path = "src/main.rs"

[[bin]]
name = "msg-pack"
path = "src/message_pack.rs"

[dependencies.rmp-serialize]
rmp-serialize = "0.7.0"

[dependencies]
rustc-serialize = "*"
